--- a/index.html
+++ b/index.html
@@ -1,28 +1,21 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Pomodoro 3D</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <!-- 3D Canvas -->
-  <canvas id="canvas3d"></canvas>
+<!-- 修改後的 HTML (index.html) -->
+<div class="control-panel">
+  <div class="time-config">
+    <!-- 保留原有語言切換 -->
+    
+    <div class="input-group">
+      <label data-i18n="total_time"></label>
+      <input type="number" id="totalTime" min="1" value="60">
+    </div>
 
-  <!-- 控制面板 -->
-  <div class="control-panel">
-    <div class="time-config">
-      <input type="number" id="totalTime" placeholder="總時間（分鐘）" min="1" value="60">
-      <input type="number" id="workTime" placeholder="工作時長（分鐘）" min="1" value="25">
-      <input type="number" id="breakTime" placeholder="休息時長（分鐘）" min="1" value="5">
-      <button id="startBtn">開始</button>
+    <div class="input-group">
+      <label data-i18n="segment_count"></label>
+      <input type="number" id="segmentCount" min="1" value="2">
     </div>
-    <div class="timer-display">
-      <span id="currentPhase">準備中</span>
-      <span id="countdown">00:00</span>
-    </div>
+
+    <!-- 動態分段輸入容器 -->
+    <div id="segmentInputs" class="segment-inputs"></div>
+
+    <button id="startBtn" data-i18n="start"></button>
   </div>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-  <script src="main.js"></script>
-</body>
-</html>
+</div>
