--- a/index.html
+++ b/index.html
@@ -110,21 +110,21 @@
 <body>
   <div class="control-panel">
     <div class="input-group">
-      <label>總時間（分鐘）</label>
+      <label>Total Time（Minutes）</label>
       <input type="number" id="totalTime" class="segment-input" min="1" value="60">
     </div>
 
     <div class="input-group">
-      <label>分段數量</label>
+      <label>Segments</label>
       <input type="number" id="segmentCount" class="segment-input" min="1" value="2">
     </div>
 
     <div id="segmentInputs"></div>
 
-    <button id="startBtn">開始專注計時</button>
+    <button id="startBtn">Start</button>
 
     <div class="timer-display">
-      <div id="currentPhase">準備開始</div>
+      <div id="currentPhase">Ready</div>
       <div id="countdown">00:00</div>
     </div>
   </div>
