--- a/index.html
+++ b/index.html
@@ -5,110 +5,7 @@
   <title>Focus Timer</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-  <--link rel="stylesheet" href="style.css">
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #f0f2f5;
-      color: #333;
-    }
-
-    .control-panel {
-      margin: 20px auto;
-      background: #fff;
-      padding: 20px;
-      border-radius: 10px;
-      width: 90%;
-      max-width: 500px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-    }
-
-    .segment-row {
-      display: flex;
-      gap: 10px;
-      margin: 10px 0;
-      align-items: center;
-      flex-wrap: wrap;
-    }
-
-    .segment-label {
-      min-width: 60px;
-      font-weight: bold;
-    }
-
-    .segment-input {
-      flex: 1;
-      padding: 8px;
-      border: 1px solid #ddd;
-      border-radius: 4px;
-    }
-
-    .unit-label {
-      margin-left: 5px;
-      color: #666;
-    }
-
-    .sound-select {
-      flex: 1;
-      padding: 8px;
-      border: 1px solid #ddd;
-      border-radius: 4px;
-    }
-
-    .external-url {
-      width: 100%;
-      padding: 8px;
-      margin-top: 5px;
-      border: 1px solid #ddd;
-      border-radius: 4px;
-      display: none;
-    }
-
-    #startBtn {
-      width: 100%;
-      padding: 12px;
-      background: #4CAF50;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      margin-top: 15px;
-      font-weight: bold;
-    }
-
-    .timer-display {
-      text-align: center;
-      margin-top: 20px;
-      padding: 15px;
-      background: #f9f9f9;
-      border-radius: 8px;
-    }
-
-    #countdown {
-      font-family: monospace;
-      font-size: 2.5em;
-      margin: 10px 0;
-    }
-
-    #videoContainer {
-      margin: 20px auto;
-      width: 90%;
-      max-width: 500px;
-      height: 280px;
-      background: #000;
-      border-radius: 8px;
-      overflow: hidden;
-      display: none;
-    }
-
-    iframe {
-      width: 100%;
-      height: 100%;
-      border: none;
-    }
-  </style>
-
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="control-panel">
