--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
 </head>
 <body>
   <div class="control-panel">
-    <div class="input-group">
-      <label>Total Time（Minutes）</label>
-      <input type="number" id="totalTime" class="segment-input" min="1" value="60">
-    </div>
+    <div class="top-controls">
+      <div class="input-group">
+        <label>Total Time（Min）</label>
+        <input type="number" id="totalTime" class="segment-input" min="1" value="60">
+      </div>
 
-    <div class="input-group">
-      <label>Segments</label>
-      <input type="number" id="segmentCount" class="segment-input" min="1" value="2">
+      <div class="input-group">
+        <label>Segments</label>
+        <input type="number" id="segmentCount" class="segment-input" min="1" value="2">
+      </div>
     </div>
 
     <div id="segmentInputs"></div>
