--- a/index.html
+++ b/index.html
@@ -2,11 +2,38 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <!-- 新增多语言alternate链接 -->
+  <!--link rel="alternate" hreflang="en" href="https://yourdomain.com/" />
+  <link rel="alternate" hreflang="zh-Hant" href="https://yourdomain.com/zh/" /-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
-  <title>Focus Timer</title>
+  <title>Free Custom Focus Timer Online - Productivity Tool for Deep Work (Pomodoro Technique)</title>
+  <!-- 优化Meta Description (新增第6行) -->
+  <meta name="description" content="Free online focus timer custom time custom sounds with multi-language support. Perfect for Pomodoro technique, study sessions, and productivity enhancement. Supports YouTube/Bilibili background sounds and custom work intervals.">
+
+  <!-- 新增中文版Meta (第7行) -->
+  <meta name="description" lang="zh-Hant" content="免費線上專注計時器，支援番茄工作法與自定義工作區間。提供YouTube/Bilibili背景影音與多種自然音效，提升工作效率的最佳工具。">
+
+  <!-- 新增Keywords (第8行) -->
+  <meta name="keywords" content="focus timer, pomodoro timer online, custom sounds, youtube integration, productivity tool, study timer, deep work timer, time management, 專注計時器, 番茄鐘, 時間管理工具">
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Focus Timer",
+    "applicationCategory": "Productivity",
+    "operatingSystem": "Web",
+    "description": "Online focus timer with multi-language and video integration features",
+    "keywords": ["focus timer", "pomodoro technique", "productivity tool"],
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    }
+  }
+  </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
   <link rel="stylesheet" href="styles.css">
