Update index.html added article

--- a/index.html
+++ b/index.html
@@ -63,6 +63,37 @@
   </div>
 
   <div id="videoContainer"></div>
+  <!-- 在control-panel下方新增说明区块 -->
+  <section class="content-section">
+    <h1>Online Focus Timer for Deep Work Sessions</h1>
+    <div class="lang-switch">
+      <a href="/en/" hreflang="en">English</a> | 
+      <a href="/zh/" hreflang="zh-Hant">中文</a>
+    </div>
+    
+    <article>
+      <h2>Boost Productivity with Smart Time Management</h2>
+      <p>This free online focus timer helps you implement the Pomodoro Technique effectively. Key features:</p>
+      <ul>
+        <li>Custom work/break intervals</li>
+        <li>Background video integration (YouTube/Bilibili)</li>
+        <li>Natural sound effects for concentration</li>
+        <li>Multi-language support (English/中文)</li>
+      </ul>
+    </article>
+  
+    <!-- 中文内容区块 -->
+    <article lang="zh-Hant">
+      <h2>高效時間管理工具</h2>
+      <p>免費線上專注計時器主要功能：</p>
+      <ul>
+        <li>自定義工作/休息時間</li>
+        <li>YouTube/Bilibili背景影片整合</li>
+        <li>提升專注力的自然音效</li>
+        <li>支援英文/繁體中文介面</li>
+      </ul>
+    </article>
+  </section>
 
   <script src="background.js"></script>
   <script src="app.js"></script>
