--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <!-- 新增多语言alternate链接 -->
-  <!--link rel="alternate" hreflang="en" href="https://yourdomain.com/" />
-  <link rel="alternate" hreflang="zh-Hant" href="https://yourdomain.com/zh/" /-->
+  <!--link rel="alternate" hreflang="en" href="https://customodoro.com/" />
+  <link rel="alternate" hreflang="zh-Hant" href="https://customodoro.com/zh/" /-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,6 +18,17 @@
 
   <!-- 新增Keywords (第8行) -->
   <meta name="keywords" content="focus timer, pomodoro timer online, custom sounds, youtube integration, productivity tool, study timer, deep work timer, time management, 專注計時器, 番茄鐘, 時間管理工具">
+  <!-- Open Graph -->
+  <meta property="og:title" content="Online Focus Timer - Productivity Tool for Deep Work">
+  <meta property="og:description" content="Free Pomodoro timer with video integration and multi-language support">
+  <meta property="og:image" content="https://customodoro.com/og-image.jpg">
+  <meta property="og:url" content="https://customodoro.com/">
+  
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Focus Timer for Productive Work Sessions">
+  <meta name="twitter:description" content="Best free online timer for Pomodoro technique and time management">
+  <meta name="twitter:image" content="https://customodoro.com/twitter-card.jpg">
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
