--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
   <!-- 在control-panel下方新增说明区块 -->
   <section class="content-section">
     <h1>Online Focus Timer for Deep Work Sessions</h1>
-    <div class="lang-switch">
+    <!--div class="lang-switch">
       <a href="/en/" hreflang="en">English</a> | 
       <a href="/zh/" hreflang="zh-Hant">中文</a>
-    </div>
+    </div-->
     
     <article>
       <h2>Boost Productivity with Smart Time Management</h2>
@@ -101,9 +101,102 @@
         <li>自定義工作/休息時間</li>
         <li>YouTube/Bilibili背景影片整合</li>
         <li>提升專注力的自然音效</li>
-        <li>支援英文/繁體中文介面</li>
+        <li>支援英文/正體中文介面</li>
       </ul>
     </article>
+
+    <article lang="zh-CN">
+      <h2>高效时间管理工具</h2>
+      <p>免费在线专注计时器主要功能：</p>
+      <ul>
+        <li>自定义工作/休息时间</li>
+        <li>YouTube/Bilibili背景视频集成</li>
+        <li>提升专注力的自然音效</li>
+        <li>支持多语言（英语/中文）</li>
+      </ul>
+    </article>
+
+    <article lang="es">
+      <h2>Aumenta la productividad con una gestión inteligente del tiempo</h2>
+      <p>Este temporizador de enfoque gratuito en línea te ayuda a implementar la Técnica Pomodoro de manera efectiva. Características principales:</p>
+      <ul>
+        <li>Intervalos personalizados de trabajo/descanso</li>
+        <li>Integración de videos de fondo (YouTube/Bilibili)</li>
+        <li>Efectos de sonido naturales para la concentración</li>
+      </ul>
+    </article>
+
+    <article lang="ar">
+      <h2>زيادة الإنتاجية من خلال إدارة ذكية للوقت</h2>
+      <p>يساعدك هذا المؤقت المجاني عبر الإنترنت على تنفيذ تقنية بومودورو بفعالية. الميزات الرئيسية:</p>
+      <ul>
+        <li>فترات عمل / راحة مخصصة</li>
+        <li>دمج فيديو الخلفية (YouTube/Bilibili)</li>
+        <li>تأثيرات صوتية طبيعية للتركيز</li>
+      </ul>
+    </article>
+
+    <article lang="fr">
+      <h2>Boostez votre productivité avec une gestion intelligente du temps</h2>
+      <p>Ce minuteur de concentration en ligne gratuit vous aide à mettre en œuvre efficacement la technique Pomodoro. Principales fonctionnalités :</p>
+      <ul>
+        <li>Intervalles de travail/repos personnalisés</li>
+        <li>Intégration de vidéos en arrière-plan (YouTube/Bilibili)</li>
+        <li>Effets sonores naturels pour la concentration</li>
+      </ul>
+    </article>
+
+    <article lang="hi">
+      <h2>स्मार्ट समय प्रबंधन के साथ उत्पादकता बढ़ाएँ</h2>
+      <p>यह निःशुल्क ऑनलाइन फोकस टाइमर आपको पोमोडोरो तकनीक को प्रभावी ढंग से लागू करने में मदद करता है। मुख्य विशेषताएँ:</p>
+      <ul>
+        <li>अनुकूलित कार्य/विराम अंतराल</li>
+        <li>पृष्ठभूमि वीडियो एकीकरण (YouTube/Bilibili)</li>
+        <li>ध्यान केंद्रित करने के लिए प्राकृतिक ध्वनि प्रभाव</li>
+      </ul>
+    </article>
+
+    <article lang="pt">
+      <h2>Aumente sua produtividade com uma gestão inteligente do tempo</h2>
+      <p>Este cronômetro de foco online gratuito ajuda você a implementar a Técnica Pomodoro de forma eficaz. Principais características:</p>
+      <ul>
+        <li>Intervalos personalizados de trabalho/descanso</li>
+        <li>Integração de vídeo em segundo plano (YouTube/Bilibili)</li>
+        <li>Efeitos sonoros naturais para concentração</li>
+      </ul>
+    </article>
+
+    <article lang="ru">
+      <h2>Повышайте продуктивность с умным управлением временем</h2>
+      <p>Этот бесплатный онлайн-таймер концентрации помогает эффективно применять технику Помодоро. Основные функции:</p>
+      <ul>
+        <li>Настраиваемые интервалы работы/отдыха</li>
+        <li>Интеграция фонового видео (YouTube/Bilibili)</li>
+        <li>Естественные звуковые эффекты для концентрации</li>
+        <li>Многоязычная поддержка (Английский/中文)</li>
+      </ul>
+    </article>
+
+    <article lang="ja">
+      <h2>スマートな時間管理で生産性を向上</h2>
+      <p>この無料のオンライン集中タイマーは、ポモドーロ・テクニックを効果的に実践するのに役立ちます。主な機能:</p>
+      <ul>
+        <li>カスタム作業/休憩インターバル</li>
+        <li>バックグラウンド動画統合 (YouTube/Bilibili)</li>
+        <li>集中力を高める自然音</li>
+      </ul>
+    </article>
+
+    <article lang="de">
+      <h2>Produktivität mit smarter Zeitverwaltung steigern</h2>
+      <p>Dieser kostenlose Online-Fokustimer hilft Ihnen, die Pomodoro-Technik effektiv umzusetzen. Hauptmerkmale:</p>
+      <ul>
+        <li>Individuell anpassbare Arbeits-/Pausenintervalle</li>
+        <li>Integration von Hintergrundvideos (YouTube/Bilibili)</li>
+        <li>Natürliche Klangeffekte zur Konzentration</li>
+      </ul>
+    </article>
+        
   </section>
 
   <script src="background.js"></script>
