Update index.html added i18n.js

--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
         
   </section>
 
+  <script src="i18n.js"></script>
   <script src="background.js"></script>
   <script src="app.js"></script>
 </body>
