--- a/index.html
+++ b/index.html
@@ -53,12 +53,14 @@
   <div class="control-panel">
     <div class="top-controls">
       <div class="input-group">
-        <label id="totalTimeLabel">Total Time (Min)</label>
+        <label>Total Time (Min)</label>
+        <!--label id="totalTimeLabel">Total Time (Min)</label-->
         <input type="number" id="totalTime" class="segment-input" min="1" value="60">
       </div>
 
       <div class="input-group">
-        <label id="segmentsLabel">Segments</label>
+        <label>Segments</label>
+        <!--label id="segmentsLabel">Segments</label-->
         <input type="number" id="segmentCount" class="segment-input" min="1" value="2">
       </div>
     </div>
