--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+  <link rel="icon" href="favicon.ico" type="images/favicon 32x32.ico">
+  <link rel="shortcut icon" href="favicon.ico" type="images/favicon 32x32.ico">
+  <link rel="apple-touch-icon" href="images/favicon 32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon 32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon 16x16.png">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
