--- a/index.html
+++ b/index.html
@@ -206,6 +206,13 @@
         
   </section>
 
+  <div id="donate-container">
+    <button id="close-donate" aria-label="Close donation button">×</button>
+    <a href="https://www.paypal.com/donate/?hosted_button_id=54LNEQZMVP8PQ" target="_blank" rel="noopener">
+      <img src="images/donate-link.png" alt="Support this project" id="donate-img">
+    </a>
+  </div>
+
   <script src="background.js"></script>
   <script src="app.js"></script>
   <script src="i18n.js"></script>
