--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
     <button id="close-donate" aria-label="Close donation button">×</button>
     <div class="donate-content">
       <button id="donate-button">Donate</button>
-      <img src="images/donate-link.png" alt="Support this project" id="donate-img">
+      <img src="images/QR Code.png" alt="Support this project" id="donate-img">
     </div>
     <a href="https://www.paypal.com/donate/?hosted_button_id=54LNEQZMVP8PQ" target="_blank" rel="noopener" class="donate-link"></a>
   </div>
