--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon 32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="images/favicon 16x16.png">
   <link rel="stylesheet" href="styles.css">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5091845805617128"
+     crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="control-panel">
