--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta name="description" lang="zh-Hant" content="免費線上專注計時器，支援番茄工作法與自定義工作區間。提供YouTube/Bilibili背景影音與多種自然音效，提升工作效率的最佳工具。">
 
   <!-- 新增Keywords (第8行) -->
-  <meta name="keywords" content="focus timer, pomodoro timer online, custom sounds, youtube integration, productivity tool, study timer, deep work timer, time management, 專注計時器, 番茄鐘, 時間管理工具">
+  <meta name="keywords" content="focus timer, pomodoro timer online, custom sounds, custom time period, youtube integration, productivity tool, study timer, deep work timer, time management, 專注計時器, 番茄鐘, 時間管理工具">
   <!-- Open Graph -->
   <meta property="og:title" content="Online Focus Timer - Productivity Tool for Deep Work">
   <meta property="og:description" content="Free Pomodoro timer with video integration and multi-language support">
