--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
-  <title>Free Custom Focus Timer Online - Productivity Tool for Deep Work (Pomodoro Technique)</title>
+  <title>Free Custom Pomodoro Focus Timer Online - Productivity Tool for Deep Work (Pomodoro Technique)</title>
   <!-- 优化Meta Description (新增第6行) -->
   <meta name="description" content="Free online focus timer custom time custom sounds with multi-language support. Perfect for Pomodoro technique, study sessions, and productivity enhancement. Supports YouTube/Bilibili background sounds and custom work intervals.">
 
