--- a/index.html
+++ b/index.html
@@ -396,9 +396,9 @@
       </div>
       
       <div class="footer-section">
-        <h3>Connect</h3>
+        <!--h3>Connect</h3>
         <p>Found this tool helpful? Consider supporting the development:</p>
-        <a href="https://www.paypal.com/donate/?hosted_button_id=54LNEQZMVP8PQ" class="donate-link" target="_blank" rel="noopener">Support this project</a>
+        <a href="https://www.paypal.com/donate/?hosted_button_id=54LNEQZMVP8PQ" class="donate-link" target="_blank" rel="noopener">Support this project</a-->
       </div>
     </div>
     
