--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5091845805617128"
      crossorigin="anonymous"></script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-62FXWLF3QJ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-62FXWLF3QJ');
+  </script>
   <meta charset="UTF-8">
   <!-- 新增多语言alternate链接 -->
   <!--link rel="alternate" hreflang="en" href="https://customodoro.com/" />
