--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
-  <title>Free Custom Pomodoro Focus Timer Online - Productivity Tool for Deep Work (Pomodoro Technique)</title>
+  <title>Custom Pomodoro Timer Online - Productivity Tool for Deep Work & Focus</title>
   <!-- 优化Meta Description (新增第6行) -->
-  <meta name="description" content="Free online focus timer with custom intervals, background sounds and YouTube integration. Perfect for Pomodoro technique, study sessions, and productivity enhancement.">
+  <meta name="description" content="Free online Pomodoro timer with custom intervals, background sounds, and YouTube integration. Perfect for focus, study sessions, and boosting productivity.">
   <meta name="keywords" content="focus timer, pomodoro timer, productivity tool, study timer, deep work timer, time management, custom timer, background sounds, youtube integration">
     
     <!-- 新增中文版Meta (第7行) -->
-  <meta name="description" lang="zh-Hant" content="免費線上專注計時器，支援番茄工作法與自定義工作區間。提供YouTube/Bilibili背景影音與多種自然音效，提升工作效率的最佳工具。">
+  <!--meta name="description" lang="zh-Hant" content="免費線上專注計時器，支援番茄工作法與自定義工作區間。提供YouTube/Bilibili背景影音與多種自然音效，提升工作效率的最佳工具。"-->
 
   <!-- 新增Keywords (第8行) -->
   <!-- Open Graph -->
@@ -95,7 +95,7 @@
   <div id="videoContainer"></div>
   <!-- 在control-panel下方新增说明区块 -->
   <section class="content-section main-content">
-    <h1>The Science Behind Effective Time Management</h1>
+    <h2>The Science Behind Effective Time Management</h2>
     
     <article id="about-pomodoro">
       <h2>What is the Pomodoro Technique?</h2>
