--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   
     gtag('config', 'G-62FXWLF3QJ');
   </script>
-  <link rel="canonical" href="https://www.customodoro.com/" />
+  <!--link rel="canonical" href="https://www.customodoro.com/" /-->
   <meta charset="UTF-8">
   <!-- 新增多语言alternate链接 -->
   <!--link rel="alternate" hreflang="en" href="https://customodoro.com/" />
