--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   
     gtag('config', 'G-62FXWLF3QJ');
   </script>
-  <!--link rel="canonical" href="https://www.customodoro.com/" /-->
+  <link rel="canonical" href="https://www.customodoro.com/" />
   <meta charset="UTF-8">
   <!-- 新增多语言alternate链接 -->
-  <!--link rel="alternate" hreflang="en" href="https://customodoro.com/" />
+  <!--link rel="alternate" hreflang="en" href="https://customodoro.com/" /-->
   <link rel="alternate" hreflang="zh-Hant" href="https://customodoro.com/zh/" /-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="preconnect" href="https://fonts.googleapis.com">
