--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     
     <article id="about-pomodoro">
       <h2>What is the Pomodoro Technique?</h2>
-      <p>The Pomodoro Technique is a time management method developed by Francesco Cirillo in the late 1980s. It uses a timer to break work into intervals, traditionally 25 minutes in length, separated by short breaks. These intervals are known as "pomodoros," the Italian word for tomato, after the tomato-shaped kitchen timer Cirillo used as a university student.   <a href="https://en.wikipedia.org/wiki/Pomodoro_Technique" target="_blank" rel="noopener noreferrer">Wikipedia</a></p>
+      <p>The Pomodoro Technique is a time management method developed by Francesco Cirillo in the late 1980s. It uses a timer to break work into intervals, traditionally 25 minutes in length, separated by short breaks. These intervals are known as "pomodoros," the Italian word for tomato, after the tomato-shaped kitchen timer Cirillo used as a university student.  -- <a href="https://en.wikipedia.org/wiki/Pomodoro_Technique" target="_blank" rel="noopener noreferrer">Wikipedia</a></p>
       
       <div class="info-box">
         <h3>How the Pomodoro Technique Works:</h3>
